src/test/ui/error-codes/E0282.stderr
error[E0282]: type annotations needed
  --> $DIR/E0282.rs:2:5
   |
LL |     None;
   |     ^^^^ cannot infer type for type parameter `T` declared on the enum `Option`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
