src/test/ui/error-codes/E0282.rs
fn main() {
    None; //~ ERROR E0282
}
